Fix: Help link margin on mobile.

--- a/src/components/Wallet/SideBar/SideBar.module.scss
+++ b/src/components/Wallet/SideBar/SideBar.module.scss
@@ -284,6 +284,10 @@
         font-weight: 500;
         padding: 0;
 
+         &.helpLink {
+           margin-top: 0;
+         }
+
         svg {
           font-size: 25px;
         }
